fixing navbar on mobile

--- a/styles/body_style.css
+++ b/styles/body_style.css
@@ -3,11 +3,11 @@ p {
 }
 
 
-html,body
+body
 {
     width: 100%;
     height: 100%;
-    margin: 0px;
+
     padding-top: 70px;
     overflow-x: hidden;
 }
